--- a/src/index.html
+++ b/src/index.html
@@ -52,13 +52,17 @@
         <img src="assets/images/image-intro-mobile.jpg" alt="" />
       </picture>
       <div class="header__container">
-        <div class="header__container--text"><h1 class="title title__header">Humanizing your insurance.</h1>
+        <img src="assets/images/bg-pattern-intro-left-mobile.svg" alt="">
+        <div class="header__container--text">
+          <h1 class="title title__header">Humanizing your insurance.</h1>
           <p class="text text__header">
             Get your life insurance coverage easier and faster. We blend our
             expertise and technology to help you find the plan that’s right for you.
             Ensure you and your loved ones are protected.
           </p>
-          <a class="button button__header" href="">VIEW PLANS</a></div>
+          <a class="button button__header" href="">VIEW PLANS</a>
+        </div>
+        <img class="header__image" src="assets/images/bg-pattern-intro-right-mobile.svg" alt="">
       </div>
     </header>
     <script type="module" src="./js/index.js"></script>
