--- a/src/index.html
+++ b/src/index.html
@@ -65,6 +65,24 @@
         <img class="header__image" src="assets/images/bg-pattern-intro-right-mobile.svg" alt="">
       </div>
     </header>
+    <section class="cards">
+      <h2 class="title title__cards">We’re different</h2>
+      <article class="card">
+        <img src="assets/images/icon-snappy-process.svg" alt="">
+        <h3 class="title title__card">Snappy Process</h3>
+        <p class="text text__card">Our application process can be completed in minutes, not hours. Don’t get stuck filling in tedious forms.</p>
+      </article>
+      <article class="card">
+        <img src="assets/images/icon-affordable-prices.svg" alt="">
+        <h3 class="title title__card">Affordable Prices</h3>
+        <p class="text text__card">We don’t want you worrying about high monthly costs. Our prices may be low, but we still offer the best coverage possible.</p>
+      </article>
+      <article class="card">
+        <img src="assets/images/icon-people-first.svg" alt="">
+        <h3 class="title title__card">People First</h3>
+        <p class="text text__card">Our plans aren’t full of conditions and clauses to prevent payouts. We make sure you’re covered when you need it.</p>
+      </article>
+    </section>
     <script type="module" src="./js/index.js"></script>
   </body>
 </html>
